@@ -379,10 +379,9 @@ void Icmpv6L4Protocol::ReceiveLLA (Icmpv6OptionLinkLayerAddress lla, Ipv6Address
       std::list<Ptr<Packet> > waiting;
       if (entry->IsIncomplete ())
         {
-          entry->StopRetransmitTimer ();
+          entry->StopNudTimer ();
           // mark it to reachable
           waiting = entry->MarkReachable (lla.GetAddress ());
-          entry->StopReachableTimer ();
           entry->StartReachableTimer ();
           // send out waiting packet
           for (std::list<Ptr<Packet> >::const_iterator it = waiting.begin (); it != waiting.end (); it++)
@@ -403,8 +402,7 @@ void Icmpv6L4Protocol::ReceiveLLA (Icmpv6OptionLinkLayerAddress lla, Ipv6Address
             {
               if (!entry->IsReachable ())
                 {
-                  entry->StopProbeTimer ();
-                  entry->StopDelayTimer ();
+                  entry->StopNudTimer ();
                   waiting = entry->MarkReachable (lla.GetAddress ());
                   if (entry->IsProbe ())
                     {
@@ -413,7 +411,6 @@ void Icmpv6L4Protocol::ReceiveLLA (Icmpv6OptionLinkLayerAddress lla, Ipv6Address
                           cache->GetInterface ()->Send (*it, src);
                         }
                     }
-                  entry->StopReachableTimer ();
                   entry->StartReachableTimer ();
                 }
             }
@@ -664,13 +661,12 @@ void Icmpv6L4Protocol::HandleNA (Ptr<Packet> packet, Ipv6Address const &src, Ipv
   if (entry->IsIncomplete ())
     {
       /* we receive a NA so stop the retransmission timer */
-      entry->StopRetransmitTimer ();
+      entry->StopNudTimer ();
 
       if (naHeader.GetFlagS ())
         {
           /* mark it to reachable */
           waiting = entry->MarkReachable (lla.GetAddress ());
-          entry->StopReachableTimer ();
           entry->StartReachableTimer ();
           /* send out waiting packet */
           for (std::list<Ptr<Packet> >::const_iterator it = waiting.begin (); it != waiting.end (); it++)
@@ -692,8 +688,7 @@ void Icmpv6L4Protocol::HandleNA (Ptr<Packet> packet, Ipv6Address const &src, Ipv
   else
     {
       /* we receive a NA so stop the probe timer or delay timer if any */
-      entry->StopProbeTimer ();
-      entry->StopDelayTimer ();
+      entry->StopNudTimer ();
 
       /* if the Flag O is clear and mac address differs from the cache */
       if (!naHeader.GetFlagO () && lla.GetAddress () != entry->GetMacAddress ())
@@ -728,7 +723,6 @@ void Icmpv6L4Protocol::HandleNA (Ptr<Packet> packet, Ipv6Address const &src, Ipv
                           entry->MarkReachable (lla.GetAddress ());
                         }
                     }
-                  entry->StopReachableTimer ();
                   entry->StartReachableTimer ();
                 }
               else if (lla.GetAddress () != entry->GetMacAddress ())
